--- a/src/views/sign-up.pug
+++ b/src/views/sign-up.pug
@@ -9,10 +9,10 @@ body(class='bg-body v-flex flex-center-all')
       h1 Nimbus
     .form-item 
       label(for='first-name') Name :
-      input(id='first-name', type="text", name="first-name", required)
+      input(id='first-name', type="text", name="first_name", required)
     .form-item 
       label(for='last-name') Last name :
-      input(id='last-name', type="text", name="last-name", required)
+      input(id='last-name', type="text", name="last_name", required)
     .form-item 
       label(for='email') Email :
       input(id='email', type="email", name="email", required) 
@@ -21,7 +21,7 @@ body(class='bg-body v-flex flex-center-all')
       input(id='password', type="password", name="password", required)
     .form-item 
       label(for='confirm-password') Confirm password :
-      input(id='confirm-password', type="password", name="confirm-password", required)
+      input(id='confirm-password', type="password", name="confirm_password", required)
     div(class='form-buttons h-flex flex-center-all')
       button(type='submit', class='create-btn') Create account 
     div(class='form-redirect h-flex flex-center-all')
