--- a/src/views/partial-views/navbar.pug
+++ b/src/views/partial-views/navbar.pug
@@ -8,7 +8,7 @@ nav(class='navigation-bar h-flex v-flex-center')
     li: a(class= 'nav-link color-hover', href="/user/membership") Membership 
     li: ul(class='nav-link  menu-user')
           li(class='color-hover cursor'): a(href="#", class='menu-link') Menu
-          li: a(href="/user/profile", class='color-hover') Profile 
+          li: a(href="/profile", class='color-hover') Profile 
           // Toggle according to user state
           li 
             form(class='not-form' action='/logout' method='post')
