--- a/public/css/membership.css
+++ b/public/css/membership.css
@@ -7,16 +7,15 @@
   flex: 1;
   justify-content: center;
   margin: auto;
-  width: 80vw;
+  width: 90vw;
 }
 
 .m-container {
-  padding: 30px;
-  gap: 30px;
+  padding: 40px;
+  gap: 10px;
   width: 100%;
   box-sizing: border-box;
-  max-height: 80vh;
-  flex-shrink: 1;
+  max-height: calc(var(--min-wrapper) - 50px);
 }
 
 .title h1 {
@@ -28,51 +27,74 @@
 }
 
 .memberships {
-  gap: 50px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 30px;
   height: 100%;
+  min-height: 0;
 }
 
 .m-item {
   display: grid;
-  grid-template-rows: auto auto;
+  grid-template-rows: 35% 65%;
+  gap: 10px;
   padding: 30px;
-  gap: 30px;
+  position: relative;
+  box-shadow: none;
+  min-height: 0;
+  min-width: 0;
 }
 
 .img-container {
-  width: 100%;
   display: flex;
   justify-content: center;
-  position: relative;
+  padding: 5px;
+  min-height: 0;
+  min-width: 0;
+}
+
+.img-container img {
+  box-sizing: border-box;
+  height: 100%;
   border-radius: 50%;
   border: 5px solid var(--accent3);
 }
 
-.img-container img {
-  width: 100%;
-  border-radius: 50%;
-}
-
 .m-body {
-  align-items: center;
-  text-align: center;
+  display: grid;
+  grid-template-rows: 20% 80%;
+  text-align: justify;
   line-height: 1.2;
+  min-height: 0;
+  min-width: 0;
+  padding: 5px;
 }
 
 .m-body h3 {
-  font-size: var(--f_size2)
+  font-size: var(--f_size2);
+  text-align: center;
 }
 
 .m-body p {
   font-size: var(--f_size4)
 }
 
+.description {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  text-align: justify;
+  line-height: 1.3;
+  padding: 5px 0;
+}
+
 .locked {
   position: absolute;
   top: 0;
+  left: 0;
+  border-radius: 8px;
   height: 100%;
   width: 100%;
-  background-color: rgb(0, 0, 0, 0.2);
-  backdrop-filter: blur(5px);
-  border-radius: 50%;
+  background-color: rgb(25, 25, 25, 0.2);
+  backdrop-filter: blur(2px);
 }
