add comment validator and normaliSe emails on signup

--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -14,7 +14,7 @@ body(class='bg-body v-flex flex-center-all')
       label(for='password') Password :
       input(id='password', type="password", name="password", required)
     div(class='form-buttons h-flex' flex-center-all)
-      button(type='submit', class='create-btn') Log-in 
+      button(type='submit', class='create-btn') Log in 
     div(class='form-redirect h-flex flex-center-all')
       p Don't have an account yet? 
       a(href='sign-up' class='size-hover color-hover') Sign-up
